IRC channel moves to Discord

--- a/index.htm
+++ b/index.htm
@@ -34,9 +34,9 @@ redirect_from: /index.php/
 
  	<h2>Issues, Bugs, and Troubleshooting</h2>
 
- 	<p>If you are having trouble installing the patch or run into any issues with the patched game itself, please read our <a href="faq.htm">F.A.Q.</a> and <a href="http://a0t.co/forum/showthread.php?tid=806">Known Issues thread</a>. If the answers are not there, please ask in the thread or on our <a href="irc.htm">live IRC Chat</a>.</p>
+	<p>If you are having trouble installing the patch or run into any issues with the patched game itself, please read our <a href="faq.htm">F.A.Q.</a> and <a href="http://a0t.co/forum/showthread.php?tid=806">Known Issues thread</a>. If the answers are not there, please ask in the thread or on <a href="https://discord.gg/wWdnduP">Discord</a>.</p>
 
-	<p>If you find any errors or bugs, even minor ones like typos, please report them in <a href="irc.htm">the IRC chat</a> or <a href="http://a0t.co/forum/showthread.php?tid=806">the Known Issues thread</a>.</p>
+	<p>If you find any errors or bugs, even minor ones like typos, please report them on <a href="https://discord.gg/wWdnduP">Discord</a>.</p>
 
 	</div>
 
@@ -51,7 +51,7 @@ redirect_from: /index.php/
     <div class="content-A">
 <!--    <f>Animation: <a>On</a> | <a>Off</a></f> -->
     <h3>About</h3>
-    <p>Welcome to the Tales of Vesperia PS3 Fan Translation website. The patch is fully, 100% complete and now available for download!</p><p>Please take a look around, and join us on our IRC Chat to talk directly to the developers and the community.</p>
+    <p>Welcome to the Tales of Vesperia PS3 Fan Translation website. The patch is fully, 100% complete and now available for download!</p><p>Please take a look around, and join us on <a href="https://discord.gg/wWdnduP">Discord</a> to talk directly to the developers and the community.</p>
     </div>
     <div class="sidebar">&nbsp;</div>
     <div class="content-A">
