forum is no longer a thing

--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,7 @@ redirect_from: /index.php/
 
  	<h2>Issues, Bugs, and Troubleshooting</h2>
 
-	<p>If you are having trouble installing the patch or run into any issues with the patched game itself, please read our <a href="faq.htm">F.A.Q.</a> and <a href="http://a0t.co/forum/showthread.php?tid=806">Known Issues thread</a>. If the answers are not there, please ask in the thread or on <a href="https://discord.gg/wWdnduP">Discord</a>.</p>
+	<p>If you are having trouble installing the patch or run into any issues with the patched game itself, please read our <a href="faq.htm">F.A.Q.</a>. If the answers are not there, please ask on <a href="https://discord.gg/wWdnduP">Discord</a>.</p>
 
 	<p>If you find any errors or bugs, even minor ones like typos, please report them on <a href="https://discord.gg/wWdnduP">Discord</a>.</p>
 
