Update sidebar site description and remove purchase and download links.

--- a/news.htm
+++ b/news.htm
@@ -39,36 +39,7 @@ redirect_from: /news.php/
     <div class="content-A">
 <!--    <f>Animation: <a>On</a> | <a>Off</a></f> -->
     <h3>About</h3>
-    <p>Welcome to the Tales of Vesperia PS3 Fan Translation website. The patch is fully, 100% complete and now available for download!</p><p>Please take a look around, and join us on our IRC Chat to talk directly to the developers and the community.</p>
-    </div>
-    <div class="sidebar">&nbsp;</div>
-    <div class="content-A">
-    <h3>Purchase Links</h3>
-    <p>The translation team gets a small portion of any sales made through these links.</p>
-    <ul>
-    <li><a href="http://www.play-asia.com/tales-of-vesperia-playstation-3-the-best-new-price-version-paOS-13-49-en-70-82gt.html?affiliate_id=921804" title="">Tales of Vesperia (PS3™)</a>
-</li>
-    <li><a href="http://www.play-asia.com/SOap-23-83-jr9o-71-lz-49-en-84-j-70-3o0z.html" title="">ToV PS3 Perfect Guide</a>
-</li>
-    <li><a href="http://www.play-asia.com/SOap-23-83-jr9o-71-lz-49-en-84-j-70-3nwj.html" title="">ToV PS3 Official Complete Guide</a>
-</li>
-    <li><a href="http://www.play-asia.com/SOap-23-83-jr9o-71-a7-49-en-84-j-70-3s52.html" title="">ToV - The First Strike</a>
-</li>
-    <li><a href="http://www.play-asia.com/SOap-23-83-jr9o-71-8l-49-en-84-j-70-2svg.html" title="">ToV OST</a>
-</li>
-    <li><a href="http://www.play-asia.com/SOap-23-83-jr9o-71-9x-49-en-84-j-70-3bya.html" title="">ToV Vol.1 Drama CD</a>
-</li>
-    <li><a href="http://www.play-asia.com/SOap-23-83-jr9o-71-184-49-en-84-j-70-41h9.html" title="">Yuri Plush Doll</a>
-</li>
-    </ul>
-    </div>
-    <div class="sidebar">&nbsp;</div>
-    <div class="content-A">
-    <h3>Releases</h3>
-    <ul>
-    <li><a href="downloads/ToVPatcher-1.0.zip">English Patch</a></li>
-    <li><a href="http://hyouta.com/vesperia/">Online Translation Guide</a></li>
-    </ul>
+    <p>Welcome to the Tales of Vesperia PS3 Fan Translation website.</p><p>A Definitive Edition of this game containing the PS3 content has been announced for Steam, Switch, PS4 and Xbox One. If you want to play this content, please buy the Definitive Edition and support the original developers.</p>
     </div>
 </div>
 </body>
