--- a/index.htm
+++ b/index.htm
@@ -16,29 +16,18 @@ redirect_from: /index.php/
 
     <div class="content-B">
 
-	<h1 style="text-align:center;">Tales of Vesperia Translation Now Available For Download</h1>
+	<h1 style="text-align:center;">Tales of Vesperia: Definitive Edition Announced</h1>
 
-	<h2>Patch information</h2>
+	<br />
+	<p>Bandai Namco Entertainment has recently announced Tales of Vesperia: Definitive Edition for Steam, PlayStation 4, Xbox One, and Nintendo Switch. It will be released worldwide and is going to feature the formerly PS3 exclusive content.</p>
+	<br />
+	<p>You can read the official press releases <a href="https://www.bandainamcoent.com/news/tales-of-vesperia-definitive-edition-announced-for-xbox-one-ps4-switch-and-pc">here</a> and <a href="https://en.bandainamcoent.eu/tales-of/news/tales-of-vesperia-definitive-edition-announced">here</a>.</p>
+	<br />
+	<p>As such, we have decided to withdraw our fan translation patch. This translation was always intended to allow the English speaking Tales fanbase to fully enjoy the PS3 exclusive Vesperia content, and it has served this purpose well for a few years now. But with this announcement it is no longer neccessary, so we are no longer going to distribute the patch.</p>
+	<p>If you are distributing this patch yourself, we would appreciate if you respected this decision and stopped doing so. Thank you.</p>
+	<p>If you want to play Tales of Vesperia with the PS3 content, please buy and support the official release of the Definitive Edition this Winter.</p>
 
-	<p>If you have the means to run homebrew on your PS3, you can download a tool to patch your game files so that you can play the game in English. Please <a href="https://github.com/AdmiralCurtiss/ToVPatcher/blob/master/README.md">read the included readme carefully</a>, as it contains information on how to properly apply and run the patch.</p>
- 
- 	<h2>Disclaimer</h2>
-
-	<p>Since there are websites out there trying to trick you into installing malware, let me state here that <b>as of the release of this patch, there is no known software exploit to run homebrew on or downgrade a console that has been updated past firmware version 3.55. Do not attempt to downgrade consoles on higher firmware versions!</b> </p><p>We cannot take responsibility for anything you may choose to do or install in the process of acquiring homebrew functionality for your PS3. Please do not try to modify your PS3 unless you are fully aware of and understand the consequences and possible risks. </p>
- 
-	<p>If you understand the above, please download the patch via the button below.</p>
-
-
-	<p style="text-align:center;"><a href="downloads/ToVPatcher-1.0.zip"><img src="images/Patch.png" /></a></p>
-    <h2 style="text-align:center;"><a href="http://hyouta.com/vesperia/">No Patching Online Translation</a></h2><br/>
-
- 	<h2>Issues, Bugs, and Troubleshooting</h2>
-
-	<p>If you are having trouble installing the patch or run into any issues with the patched game itself, please read our <a href="faq.htm">F.A.Q.</a>. If the answers are not there, please ask on <a href="https://discord.gg/wWdnduP">Discord</a>.</p>
-
-	<p>If you find any errors or bugs, even minor ones like typos, please report them on <a href="https://discord.gg/wWdnduP">Discord</a>.</p>
-
-	</div>
+    </div>
 
 </div>
 
